<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/one_hundred_dp"
        android:layout_height="@dimen/one_hundred_dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        app:layout_marginTopPercent="15%"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_hundred_dp"
        android:layout_marginTop="@dimen/thirty_dp"
        android:background="@drawable/login_edit"
        android:orientation="vertical"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%">

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/user_phone"
            android:inputType="phone"
            android:paddingLeft="@dimen/ten_dp"
            android:textColor="#787E8C"
            android:textColorHint="#787E8C"
            android:textSize="@dimen/twenty_sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/two_dp"
            android:background="#ECEDF1"/>

        <EditText
            android:id="@+id/edtPassWord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/ten_dp"
            android:textColor="#787E8C"
            android:textColorHint="#787E8C"
            android:textSize="@dimen/twenty_sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:layout_marginTop="@dimen/thirty_dp"
        android:orientation="horizontal"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/twenty_dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_sp"
        app:layout_marginRightPercent="10%"/>

</com.zhy.android.percent.support.PercentLinearLayout>